[package]
name = "bigmul"
version = "0.1.0"
authors = ["Roger Curley <rocurley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_simd = "0.3"
[dev-dependencies]
proptest = "0.9"
rand = "0.7"
rand_chacha = "0.2"
