[package]
name = "bigmul"
version = "0.1.0"
authors = ["Roger Curley <rocurley@gmail.com>"]
edition = "2018"
[features]
default = ["asm"]
asm = []

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true
[profile.release]
debug = true

[dependencies]
packed_simd = "0.3"
[dev-dependencies]
proptest = "0.9"
rand = "0.7"
rand_chacha = "0.2"
cpuprofiler = "0.0.4"
criterion = "0.3"

[[bench]]
name = "benchmark"
path = "src/benchmarks.rs"
harness = false
debug = true

